# grpc-longlive-example

./: CMakeLists.txt  Readme.md  main.cpp
backend/: CMakeLists.txt  main.cpp  service.cpp  service.h
libbackendproto/: CMakeLists.txt  backend.proto
libclient/: CMakeLists.txt  client.cpp  client.h
